# Sawyer_control

./: README.md
classification_examples/: CMakeLists.txt  package.xml
classification_examples /launch/: classification_pick_and_place_demo.launch
classification_examples /models/block_1/: model.urdf
classification_examples /scripts/: classification_pick_and_place_demo.py  ik_pick_and_place_demo.py
joint_angle/: CMakeLists.txt  package.xml
joint_angle/src/: Joint_0_pos.cpp  Joint_pos.cpp
record_pos/: CMakeLists.txt  package.xml
record_pos/src/: Record_pos.cpp
sawyer_sim_examples/: CMakeLists.txt
sawyer_sim_examples/launch/: classification_pick_and_place_demo.launch
sawyer_sim_examples/models/block/: model.urdf
sawyer_sim_examples/models/block_blue/: model.urdf
sawyer_sim_examples/models/bowl/: model.sdf
sawyer_sim_examples/models/bowl _1/: model.sdf
sawyer_sim_examples/models/camera_1/: model.urdf
sawyer_sim_examples/models/cylinder_orange/: model.urdf
sawyer_sim_examples/models/cylinder_red/: model.urdf
sawyer_sim_examples/models/kinect/: model.sdf
test/: CMakeLists.txt  package.xml
test/src/: test.cpp
