<?xml version="1.0"?>
<package>
  <name>classification_examples</name>
  <version>5.3.0</version>
  <description>The classification_examples package</description>

  <maintainer email="cdmbaozimiao@gmail.com">
  </maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://github.com/Wasabi111/Sawyer_control</url>
  <url type="repository">
    https://github.com/Wasabi111/Sawyer_control
  </url>

  <author>Rethink Robotics Inc.</author>
  <author>Ian McMahon</author>

  <author>Dongming Chang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>intera_core_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>rospack</run_depend>
  <run_depend>intera_core_msgs</run_depend>
  <run_depend>intera_interface</run_depend>
  <run_depend>sawyer_gazebo</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_msgs</run_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros gazebo_media_path="${prefix}/models"/>
  </export>

</package>
